--- a/content/articles/notes-on-the-software-engineers-guide-book.mdx
+++ b/content/articles/notes-on-the-software-engineers-guide-book.mdx
@@ -106,4 +106,4 @@ These are my notes for the book [The Software Engineer's Guidebook](https://www.
 
 - Learn a second language. Gaining proficiency in another language can provide perspective about your primary language. You can compare strengths and weaknesses, and it makes learning additional languages easier.
 
-- Refactoring and debugging are important skills. Learn the tools that simplify these tasks and ensure you regularly practice these skills.- Understand the trade-offs of different architectures. This will help you make better decisions when designing systems.
+- Refactoring and debugging are important skills. Learn the tools that simplify these tasks and ensure you regularly practice these skills.
