feat: more additions
Signed-off-by: KXLAA <kolade.afode@yahoo.com>

--- a/content/articles/notes-on-the-software-engineers-guide-book.mdx
+++ b/content/articles/notes-on-the-software-engineers-guide-book.mdx
@@ -107,3 +107,27 @@ These are my notes for the book [The Software Engineer's Guidebook](https://www.
 - Learn a second language. Gaining proficiency in another language can provide perspective about your primary language. You can compare strengths and weaknesses, and it makes learning additional languages easier.
 
 - Refactoring and debugging are important skills. Learn the tools that simplify these tasks and ensure you regularly practice these skills.
+
+- Strengthen your refactoring muscles - by refactoring code regularly - for every few tasks you complete, make it a point to do an important refactoring task.
+
+- Testing is very important - not just automated tests - but manual tests are also very important. They help catch edge cases and help us confirm our assumptions about how a piece of functionality is meant to work. Embrace a testing mindset.
+
+- Automated testing also assists with refactoring - when you have a strong suite of tests in place - you can more confidently carry out significant refactors as the underlying logic has been tested.
+
+## Chapter 10 - Tools of the productive software engineer
+
+- It is important to remain in the flow when working on code - we can ensure we stay in this state by having a rapid edit, compile/run, and output cycle. If it takes more than a few seconds to make edits & see how they look - you are most likely losing time on context switching.
+
+- Spend some time configuring your IDE and workflow by setting up shortcuts for frequent actions, configuring your theme & setting up code formatting and linting if needed. Make sure to use your team's linting and formatting config if one exists.
+
+- Get familiar with the frequently used tools of the trade - Git, SQL, The terminal, regular expressions, AI coding assistants.
+
+- If you have custom tools within your company to assist with development make sure you are familiar with the most important ones - make a list, figure out how to access them & how they work - create your own cheat sheet on how to use them effectively.
+
+- Consider having a personal `productivity cheat sheet.` Start with a blank document and add names of tools with short descriptions of what they do - links, commands & other notes.
+
+- Compare your output with your team members' work. This isn't about competition, but a way to assess your productivity, pace of iteration, and how you measure up against your colleagues. Track the frequency of teammates' pull requests, code pushes to production, and task completion. This can give you insight into your performance before receiving explicit feedback.
+
+- Understanding the existing code is key to improving your iteration speed. Dedicate time to comprehend how different modules interact and how the codebase functions.
+
+- Getting regular feedback is crucial. The fastest ways to develop as an engineer are by building and deploying problem-solving solutions, and receiving feedback. Evaluate if your solution functions as anticipated and whether it has any unexpected consequences.
