--- a/content/articles/yes-i-would-use-redux-in-2024.mdx
+++ b/content/articles/yes-i-would-use-redux-in-2024.mdx
@@ -5,7 +5,7 @@ description: "Redux is still a vaild choice for react state management"
 tags: ["redux", "react", "state management"]
 articleType: "article"
 og: "https://ucarecdn.com/2cf34f69-bcf8-4344-9bd2-4d38de6597f8/yesiwouldusereduxin2024.png"
-status: "draft"
+status: "published"
 ---
 
 Nowadays, it seems like Redux has become a meme about the complexity of modern web development. Although I can somewhat relate to these memes, I don't believe that Redux, in its current form, is as complex as folks make it out to be.
